# Batch-classifier

./: README.md
back-end traffic classification code/: Agg_RFmodelTrain_TCP.py  Agg_RFmodelTrain_UDP.py  BigSmallLabel.py  README.txt  RFmodelTrainClass.py  RFtest_Concept.py
bcac_project/: CMakeLists.txt  LICENSE  README.md
bcac_project/src/main/: main_BCAC_capture.cpp  main_BCAC_pcap.cpp
